Moved scrollbar CSS to global style CSS file. Fixed scrollbars causing page jumps when switching between scrollable and non-scrollable pages

--- a/Dashboard/client/components/header/style.css
+++ b/Dashboard/client/components/header/style.css
@@ -1,23 +1,3 @@
-/* Global scrollbar styling */
-::-webkit-scrollbar {
-    width: 12px;
-    background: none;
-}
-::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.11);
-    background-color: #514f5d;
-}
-::-webkit-scrollbar-thumb:active {
-    background-color: #3c3945;
-}
-::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.21);
-    border-radius: 10px;
-    background-color: #ffffff1f;
-}
-
-
 .header {
     width: 100%;
     background: #23262B;
